<resources>
    <string name="app_name">AppInmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mail">Mail</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="dni">Dni:</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Mail</string>
    <string name="tel">Telefono</string>
    <string name="cbEstado">Disponible</string>
    <string-array name="tipos">
        <item value="1">Local</item>
        <item value="2">Deposito</item>
        <item value="3">Casa</item>
        <item value="4">Departamento</item>
        <item value="5">Residencial</item>
    </string-array>
</resources>