<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.appinmobiliaria.ui.home.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appinmobiliaria.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>