<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="433dp"
        android:layout_height="match_parent"
        android:background="#DFDFDF"
        android:backgroundTint="#DFDFDF">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#FF6E40"
            android:text="Editar"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRepetirContraseña" />

        <ImageView
            android:id="@+id/ivProp"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="72dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/etDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDni" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.805"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etApellido" />

        <EditText
            android:id="@+id/etTel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMail" />

        <TextView
            android:id="@+id/tvPerfil1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="184dp"
            android:text="@string/dni"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPerfil2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/nombre"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerfil1" />

        <TextView
            android:id="@+id/tvPerfil3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:text="@string/apellido"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerfil2" />

        <TextView
            android:id="@+id/tvPerfil4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerfil3" />

        <TextView
            android:id="@+id/tvPerfil6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/tel"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerfil4" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#FF6E40"
            android:text="Guardar"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRepetirContraseña"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btnCClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#FF6E40"
            android:text="Cambiar Clave"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTel" />

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Contraseña Nueva"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#7C7272"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etClaveActual"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/etRepetirContraseña"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Repetir contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#7C7272"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etContraseña"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/etClaveActual"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Contraseña actual"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#7C7272"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTel"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btnGuardarClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FF6E40"
            android:text="Guardar Clave"
            android:textColor="#ffff"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toEndOf="@+id/btnGuardar"
            app:layout_constraintTop_toBottomOf="@+id/etRepetirContraseña"
            tools:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>